[package]
name = "s-expression"
version = "0.1.0"
edition = "2021"
description = "A simple S-Expression parser"
license = "MIT"
repository = "https://github.com/eckertliam/s-expression"
readme = "README.md"

[lib]
name = "sexpression"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[dependencies]
thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"
